<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.users.FormCounselingActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/title_counseling"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/hint_full_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_textfield"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/hint_address"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_textfield"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_full_name"
        android:importantForAutofill="no" />

    <LinearLayout
        android:id="@+id/ll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_address">

        <Spinner
            android:id="@+id/sp_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:layout_marginEnd="8dp"
            android:background="@drawable/custom_textfield"/>

        <Button
            android:id="@+id/btn_date_birth"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@drawable/custom_textfield"
            android:text="@string/label_date_birth"
            android:textSize="14sp"
            android:textStyle="normal"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_zat_used"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/hint_zat_used"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_textfield"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_view"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_usage_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/hint_usage_time"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_textfield"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_zat_used"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/hint_phone_number"
        android:textColorHint="@color/white"
        android:background="@drawable/custom_textfield"
        android:inputType="phone"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usage_time"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:text="@string/label_button_back"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/custom_button"
            android:text="@string/label_button_report"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>