<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".activities.users.FormAbuseActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:src="@drawable/header_lapor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="-14dp" />

        <EditText
            android:id="@+id/et_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/custom_textfield"
            android:hint="@string/hint_full_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/et_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/custom_textfield"
            android:hint="@string/hint_phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_full_name" />


        <Spinner
            android:id="@+id/spinner"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/custom_textfield"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:text="@string/hint_spinner"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/custom_textfield"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:text="Pilih Keperluan"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/custom_textfield"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/label_pick_photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner2" />

        <RelativeLayout
            android:id="@+id/rl_preview_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pick_photo">
            <ImageView
                android:id="@+id/iv_preview"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_bnn_ked"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FF0000"
                android:layout_alignEnd="@+id/iv_preview">

                <ImageView
                    android:id="@+id/iv_remove_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_close_24"
                    app:tint="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_preview_image">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/custom_button"
                android:text="@string/label_button_back"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/custom_button"
                android:text="@string/label_button_report"
                android:textColor="@color/white"
                android:textSize="14sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>