<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".activities.admin.abuse.DetailAbuseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="8dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/logo_bnn_ked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_detail_abuse"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>

        <LinearLayout
            android:id="@+id/ll_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:orientation="vertical"
            android:background="@color/black">

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                tools:text="Phone Number"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textStyle="normal"
                />

            <TextView
                android:id="@+id/tv_district"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                tools:text="Kecamatan"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                tools:text="Alamat"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/tv_point_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                tools:text="Titik Lokasi"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_data">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textAllCaps="false"
                android:layout_weight="0.5"
                android:background="@drawable/custom_button"
                android:text="@string/label_button_back"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_confirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textAllCaps="false"
                android:background="@drawable/custom_button"
                android:text="@string/label_button_confirmation"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>